# SVT-AV1-Essential

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Docs/: Parameters.md
Source/API/: EbConfigMacros.h  EbDebugMacros.h  EbSvtAv1Enc.h
Source/App/: CMakeLists.txt  app_config.c  app_config.h  app_context.c  app_main.c  app_output_ivf.c  app_output_ivf.h  app_process_cmd.c
Source/Lib/: CMakeLists.txt
Source/Lib/ASM_AVX2/: cfl_avx2.c  convolve_avx2.c  pickrst_avx2.c
Source/Lib/ASM_AVX512/: pickrst_avx512.c
Source/Lib/ASM_NEON/: cfl_neon.c  highbd_intra_prediction_neon.c  highbd_pickrst_neon.c  inter_prediction_neon.c  pickrst_neon.c
Source/Lib/ASM_SSE2/: highbd_subtract_sse2.c
Source/Lib/ASM_SSE4_1/: pickrst_sse4.c  reconinter_sse4.c
Source/Lib/ASM_SVE/: highbd_pickrst_sve.c  pickrst_sve.c
Source/Lib/C_DEFAULT/: cfl_c.c  picture_operators_c.c
Source/Lib/Codec/: CMakeLists.txt  ConfigureGitVersion.cmake  EbVersion.h.in  ac_bias.c  ac_bias.h  adaptive_mv_pred.c  aom_dsp_rtcd.c  aom_dsp_rtcd.h  av1_structs.h  av1me.c  cdef_process.c  coding_loop.c  coding_unit.c  coding_unit.h  common_dsp_rtcd.c  common_dsp_rtcd.h  deblocking_filter.c  deblocking_filter.h  definitions.h  dlf_process.c  ec_process.c  enc_cdef.c  enc_dec_process.c  enc_dec_process.h  enc_dec_tasks.h  enc_inter_prediction.c  enc_intra_prediction.c  enc_mode_config.c  enc_mode_config.h  encode_context.h  encoder.h  entropy_coding.c  entropy_coding.h  full_loop.c  initial_rc_process.c  initial_rc_results.h  inter_prediction.c  intra_prediction.c  intra_prediction.h  md_config_process.c  (+40 more)
Source/Lib/Globals/: enc_handle.c  enc_settings.c  enc_settings.h
